# StockAIvo

./: .gitignore  CONFIGURATION.md  README.md  main.py  projectBrief.md  pyproject.toml
.cunzhi-memory/: context.md  metadata.json  preferences.md  rules.md
.roo/: mcp.json
database_migrations/: README.md  add_search_indexes.sql  create_search_indexes.py  create_stock_news_table.py  create_stock_news_table.sql  create_stock_symbols_index.py  create_stock_symbols_index.sql
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AIAnalysis.tsx  StockSearch.tsx  TradingViewChart.tsx
frontend/src/components/__tests__/: AIAnalysis.test.tsx
frontend/src/components/ui/: calendar.tsx  date-range-picker.tsx  popover.tsx  switch.tsx
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
stockaivo/: background_scheduler.py  cache_manager.py  data_provider.py  data_service.py  database.py  database_writer.py  dependencies.py  exceptions.py  middleware.py  models.py  schemas.py  search_service.py
stockaivo/ai/: __init__.py  agents.py  llm_service.py  orchestrator.py  state.py  technical_indicator.py  tools.py
stockaivo/routers/: __init__.py  ai.py  search.py  stocks.py
stockaivo/scripts/: run.py
tests/: run_search_tests.py  test_data_service.py  test_langgraph_orchestrator.py  test_search_api.py  test_search_performance.py  test_search_service.py  test_stock_symbols_performance.py  test_technical_indicator.py
