[project]
name = "stockaivo"
version = "0.1.0"
description = "智能美股数据与分析平台后端"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.34.3",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "akshare>=1.17.6",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "langgraph>=0.4.8",
    "langchain-core>=0.3.65",
    "google-generativeai>=0.8.5",
    "pandas-market-calendars>=5.1.1",
    "tenacity>=9.1.2",
    "apscheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
]

[project.scripts]
dev = "stockaivo.scripts.run:dev"
start = "stockaivo.scripts.run:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stockaivo"]

# MyPy 类型检查配置
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 渐进式类型检查，暂时允许未类型化的函数
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # FastAPI装饰器兼容性
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# 忽略第三方库的类型检查
[[tool.mypy.overrides]]
module = [
    "akshare.*",
    "pandas_market_calendars.*",
    "langgraph.*",
    "langchain_core.*",
    "google.generativeai.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
